# drawing-app

./: README.md
backend/: Cargo.toml  dump.rdb
backend/migrations/: 0001_rooms.sql  0001_users.sql  0002_users_update.sql  0003_verification_codes.sql  0004_rooms.sql  0005_room_user.sql
backend/src/: main.rs  routes.rs
backend/src/controllers/: mod.rs  room_controllers.rs  users.rs
backend/src/models/: draw_lines_models.rs  error_json.rs  mod.rs  room_models.rs  state.rs  users.rs
backend/src/utils/: auth_helpers.rs  emails.rs  helpers.rs  mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/drawing-page-ui/: Canvas.tsx
frontend/src/components/ui/: JoinRoomButton.tsx  SignOutButton.tsx  Spotlight.tsx  colorPicker.tsx  createRoomButton.tsx  vortex.tsx
frontend/src/lib/: AuthProvider.tsx  helpers.ts  router.tsx
frontend/src/pages/: Draw.tsx  HomePage.tsx  LoginPage.tsx  SignUpPage.tsx  VerificationPage.tsx
