[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
sqlx = {version = "0.6" ,features = ["postgres" , "runtime-tokio-rustls"]}
tokio = { version = "1", features = ["full"] }
socketioxide = { version = "0.14", features = ["state"] }
tower = "0.4.13"
tower-http = {version = "0.5", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
redis = "0.26.1"
bcrypt = "0.15.1"
uuid = { version = "1.0", features = ["v4"] }
tower-cookies = "0.10.0"
http = "1.1.0"
